--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
-    "sass": "^1.49.9",
+    "sass": "^1.50.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
